crates/aranya-policy-compiler/tests/data/struct_composition/not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
5 |         ...x
  |            ^ 'x' not in scope
